--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,8 @@ runs:
   image: 'Dockerfile'
   args:
     - ${{ inputs.kubectlVersion }}
+    - ${{ inputs.helmVersion }}
+    - ${{ inputs.helmSecretsVersion }}
     - ${{ inputs.kubeConfigData }}
     - ${{ inputs.command }}
 branding:
@@ -13,6 +15,14 @@ branding:
 inputs:
   kubectlVersion:
     description: 'kubectl version, e.g. `v1.22.1`, defaults to latest'
+    required: false
+    default: latest
+  helmVersion:
+    description: 'helm version, e.g. `v3.6.3`, defaults to latest'
+    required: false
+    default: latest
+  helmSecretsVersion:
+    description: 'kubectl version, e.g. `v3.8.3`, defaults to latest'
     required: false
     default: latest
   kubeConfigData:
